--- a/charts/kube-secrets-init/values.yaml
+++ b/charts/kube-secrets-init/values.yaml
@@ -2,24 +2,24 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-# -- Number of Pods to launch.
+# -- Number of replicas (pods) to launch.
 replicaCount: 1
 
 image:
-  # -- Repository to pull the container image from.
+  # -- Name of the image repository to pull the container image from.
   repository: doitintl/kube-secrets-init
-  # -- Image [pull policy](https://kubernetes.io/docs/concepts/containers/images/#updating-images)
+  # -- [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#updating-images) for updating already existing images on a node.
   pullPolicy: IfNotPresent
-  # -- Overrides the image tag (default is the chart appVersion).
+  # -- Image tag override for the default value (chart appVersion).
   tag: ""
 
-# -- Image [pull secrets](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/#create-a-pod-that-uses-your-secret)
+# -- Reference to one or more secrets to be used when [pulling images](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/#create-a-pod-that-uses-your-secret) (from private registries).
 imagePullSecrets: []
 
-# -- Provide a name in place of the chart name for `app:` labels.
+# -- A name in place of the chart name for `app:` labels.
 nameOverride: ""
 
-# -- Provide a name to substitute for the full names of resources.
+# -- A name to substitute for the full names of resources.
 fullnameOverride: ""
 
 # -- One of the supported secret providers:
@@ -27,8 +27,9 @@ fullnameOverride: ""
 #   - `aws` (AWS Secrets Manager and SSM Parameter Store)
 provider: ""
 
-# -- Fallback secret name to use when no image pull secret is found in a Pod.
+# -- Fallback secret name to use when no image pull secret is found.
 defaultImagePullSecret: ""
+
 # -- Namespace of the fallback secret name.
 defaultImagePullSecretNamespace: ""
 
@@ -37,28 +38,32 @@ certificate:
   # This is usually preferred as cert-manager automatically renews certificates.
   # Mutually exclusive with `generate`.
   useCertManager: false
+
   # -- Generate the necessary certificates during chart install.
   # Mutually exclusive with `useCertManager`.
   generate: true
+
   # -- The name of the secret to use.
   # If not set and useCertManager or generate is true, a name is generated using the fullname template.
   secretName: ""
 
 serviceAccount:
-  # -- Whether a service account should be created.
+  # -- Enable service account creation.
   create: true
-  # -- Annotations to add to the service account.
+
+  # -- Annotations to be added to the service account.
   annotations: {}
+
   # -- The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template.
   name: ""
 
 rbac:
-  # -- Specifies whether RBAC resources should be created.
-  # If disabled, the operator is responsible for creating the necessary resources based on the templates.
+  # -- Enable the creation of RBAC resources.
+  # If disabled, the operator (ie. the person installing the chart) is responsible for creating the necessary resources based on the templates.
   create: true
 
-# -- Custom annotations for a Pod.
+# -- Annotations to be added to pods.
 podAnnotations: {}
 
 # -- Pod [security context](https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod).
@@ -118,8 +123,7 @@ tolerations: []
 # See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workloads-resources/pod-v1/#scheduling) for details.
 affinity: {}
 
-# -- [Namespace selector](https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#matching-requests-namespaceselector)
-# for the mutating webhook configuration.
+# -- [Namespace selector](https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#matching-requests-namespaceselector) for the mutating webhook configuration.
 # @default -- `kube-system` namespace is excluded.
 namespaceSelector:
   matchExpressions:
@@ -130,8 +134,7 @@ namespaceSelector:
   # matchLabels:
   #   secret-injection: enabled
 
-# -- [Object selector](https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#matching-requests-objectselector)
-# for the mutating webhook configuration.
+# -- [Object selector](https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#matching-requests-objectselector) for the mutating webhook configuration.
 # @default -- Exclude objects labeled with `kube-init-secrets.doit-intl.com/mutate: skip`.
 objectSelector:
   matchExpressions:
