--- a/charts/tusd/Chart.yaml
+++ b/charts/tusd/Chart.yaml
@@ -19,7 +19,7 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - Initial version
+    - Improve documentation
   artifacthub.io/images: |
     - name: tusd
       image: tusproject/tusd:v1.6.0
