--- a/charts/tusd/values.yaml
+++ b/charts/tusd/values.yaml
@@ -2,52 +2,54 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-# -- Number of Pods to launch.
+# -- Number of replicas (pods) to launch.
 replicaCount: 1
 
 image:
-  # -- Repository to pull the container image from.
+  # -- Name of the image repository to pull the container image from.
   repository: tusproject/tusd
-  # -- Image [pull policy](https://kubernetes.io/docs/concepts/containers/images/#updating-images)
+  # -- [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#updating-images) for updating already existing images on a node.
   pullPolicy: IfNotPresent
-  # -- Overrides the image tag (default is the chart appVersion).
+  # -- Image tag override for the default value (chart appVersion).
   tag: ""
 
-# -- Image [pull secrets](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/#create-a-pod-that-uses-your-secret)
+# -- Reference to one or more secrets to be used when [pulling images](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/#create-a-pod-that-uses-your-secret) (from private registries).
 imagePullSecrets: []
 
-# -- Provide a name in place of the chart name for `app:` labels.
+# -- A name in place of the chart name for `app:` labels.
 nameOverride: ""
 
-# -- Provide a name to substitute for the full names of resources.
+# -- A name to substitute for the full names of resources.
 fullnameOverride: ""
 
-# -- Additional storage [volumes](https://kubernetes.io/docs/concepts/storage/volumes/) of a Pod.
+# -- Additional storage [volumes](https://kubernetes.io/docs/concepts/storage/volumes/).
 # See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workloads-resources/pod-v1/#volumes) for details.
 volumes: []
 
-# -- Additional [volume mounts](https://kubernetes.io/docs/tasks/configure-pod-container/configure-volume-storage/) of a container.
+# -- Additional [volume mounts](https://kubernetes.io/docs/tasks/configure-pod-container/configure-volume-storage/).
 # See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workloads-resources/container/#volumes) for details.
 volumeMounts: []
 
-# -- Configure a [Secret](https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets-as-environment-variables) or a [ConfigMap](https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables) as environment variable sources for a Pod.
+# -- Additional environment variables mounted from [secrets](https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets-as-environment-variables) or [config maps](https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables).
 # See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workloads-resources/container/#environment-variables) for details.
 envFrom: []
 
-# -- Pass environment variables directly to a Pod.
+# -- Additional environment variables passed directly to containers.
 # See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workloads-resources/container/#environment-variables) for details.
 env: {}
 
 serviceAccount:
-  # -- Whether a service account should be created.
+  # -- Enable service account creation.
   create: true
-  # -- Annotations to add to the service account.
+
+  # -- Annotations to be added to the service account.
   annotations: {}
+
   # -- The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template.
   name: ""
 
-# -- Custom annotations for a Pod.
+# -- Annotations to be added to pods.
 podAnnotations: {}
 
 # -- Pod [security context](https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod).
@@ -71,23 +73,23 @@ securityContext: {}
 containerArgs: []
 
 service:
-  # -- Custom annotations for the Service.
+  # -- Annotations to be added to the service.
   annotations: {}
 
   # -- Kubernetes [service type](https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types).
   type: ClusterIP
 
-  # -- (string) Only applies when service tyep is LoadBalancer. Load balancer will get created with the IP specified in this field.
+  # -- (string) Only applies when the service type is LoadBalancer. Load balancer will get created with the IP specified in this field.
   loadBalancerIP:
 
   # -- (list) If specified (and supported by the cloud provider), traffic through the load balancer will be restricted to the specified client IPs.
   # Valid values are IP CIDR blocks.
   loadBalancerSourceRanges: []
 
-  # -- Service port
+  # -- Service port.
   port: 80
 
-  # -- (int) Service node port (when applicable)
+  # -- (int) Service node port (when applicable).
   nodePort:
 
   # -- Route external traffic to node-local or cluster-wide endoints.
@@ -98,7 +100,7 @@ ingress:
   # -- Enable ingress.
   enabled: false
 
-  # -- Annotations to add to the ingress.
+  # -- Annotations to be added to the ingress.
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
