--- a/charts/sftpgo/templates/configmap.yaml
+++ b/charts/sftpgo/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "sftpgo.componentname" (list . "config") }}
+  name: {{ include "sftpgo.fullname" . }}
   labels:
     {{- include "sftpgo.labels" . | nindent 4 }}
 data:
