--- a/charts/tusd/templates/deployment.yaml
+++ b/charts/tusd/templates/deployment.yaml
@@ -71,6 +71,7 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
       {{- with .Values.volumes }}
+      volumes:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.nodeSelector }}
