revert(charts/tusd): ingress breaking change
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/tusd/Chart.yaml
+++ b/charts/tusd/Chart.yaml
@@ -19,7 +19,7 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - Improve ingress
+    - Revert ingress breaking change
   artifacthub.io/images: |
     - name: tusd
       image: tusproject/tusd:v1.6.0
