--- a/charts/tusd/values.yaml
+++ b/charts/tusd/values.yaml
@@ -110,7 +110,7 @@ ingress:
 
   # -- Ingress host configuration.
   # @default -- See [values.yaml](values.yaml).
-  rules:
+  hosts:
     - host: chart-example.local
       paths:
         - path: /
