revert(charts/caddy): ingress breaking change
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/caddy/Chart.yaml
+++ b/charts/caddy/Chart.yaml
@@ -21,7 +21,7 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - Add icon
+    - Revert ingress breaking change
   artifacthub.io/images: |
     - name: caddy
       image: caddy:2.3.0
