--- a/charts/caddy/templates/ingress.yaml
+++ b/charts/caddy/templates/ingress.yaml
@@ -37,7 +37,7 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    {{- range .Values.ingress.rules }}
+    {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
