feat(charts/kube-ini-secrets): add init container image configuration
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/kube-secrets-init/Chart.yaml
+++ b/charts/kube-secrets-init/Chart.yaml
@@ -15,6 +15,7 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - Improve defaultImagePullSecret configuration
+    - Add init container image configuration
   artifacthub.io/images: |
     - name: kube-secrets-init
       image: doitintl/kube-secrets-init:0.2.18
