--- a/charts/kube-secrets-init/ci/test-values.yaml
+++ b/charts/kube-secrets-init/ci/test-values.yaml
@@ -1,1 +1,6 @@
-provider: aws
+provider: none
+
+# Until https://github.com/doitintl/kube-secrets-init/issues/21 is fixed
+initContainer:
+  image:
+    tag: 0.2.12
