feat(charts/kube-secrets-init): add pod disruption budget
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/kube-secrets-init/Chart.yaml
+++ b/charts/kube-secrets-init/Chart.yaml
@@ -16,6 +16,7 @@ annotations:
   artifacthub.io/changes: |
     - Improve defaultImagePullSecret configuration
     - Add init container image configuration
+    - Add pod disruption budget
   artifacthub.io/images: |
     - name: kube-secrets-init
       image: doitintl/kube-secrets-init:0.2.18
