--- a/charts/kube-secrets-init/values.yaml
+++ b/charts/kube-secrets-init/values.yaml
@@ -158,3 +158,14 @@ objectSelector:
       operator: NotIn
       values:
         - skip
+
+podDisruptionBudget:
+  # -- Enable a [pod distruption budget](https://kubernetes.io/docs/tasks/run-application/configure-pdb/) to help dealing with [disruptions](https://kubernetes.io/docs/concepts/workloads/pods/disruptions/).
+  # It is **highly recommended** for webhooks as disruptions can prevent launching new pods.
+  enabled: false
+
+  ## -- (int/percentage) Number or percentage of pods that must remain available.
+  minAvailable:
+
+  ## - (int/percentage) Number or percentage of pods that can be unavailable.
+  maxUnavailable:
