--- a/charts/kube-secrets-init/Chart.yaml
+++ b/charts/kube-secrets-init/Chart.yaml
@@ -14,9 +14,7 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - Improve defaultImagePullSecret configuration
-    - Add init container image configuration
-    - Add pod disruption budget
+    - Improve documentation
   artifacthub.io/images: |
     - name: kube-secrets-init
       image: doitintl/kube-secrets-init:0.2.18
