docs(charts/browserless-chrome): update readme template
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/browserless-chrome/Chart.yaml
+++ b/charts/browserless-chrome/Chart.yaml
@@ -20,7 +20,7 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - Initial version
+    - Improve documentation
   artifacthub.io/images: |
     - name: browserless-chrome
       image: browserless/chrome:1.45.1-chrome-stable
