--- a/charts/caddy/Chart.yaml
+++ b/charts/caddy/Chart.yaml
@@ -21,7 +21,7 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - Improve documentation
+    - Add default value to ingress.className
   artifacthub.io/images: |
     - name: caddy
       image: caddy:2.3.0
