--- a/charts/tusd/values.yaml
+++ b/charts/tusd/values.yaml
@@ -102,8 +102,8 @@ ingress:
   # -- Enable [ingress](https://kubernetes.io/docs/concepts/services-networking/ingress/).
   enabled: false
 
-  # -- (string) Ingress [class name](https://kubernetes.io/docs/concepts/services-networking/ingress/#ingress-class).
-  className:
+  # -- Ingress [class name](https://kubernetes.io/docs/concepts/services-networking/ingress/#ingress-class).
+  className: ""
 
   # -- Annotations to be added to the ingress.
   annotations: {}
