--- a/charts/kube-secrets-init/Chart.yaml
+++ b/charts/kube-secrets-init/Chart.yaml
@@ -15,6 +15,7 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - Update application
+    - Use images published on ghcr.io
   artifacthub.io/images: |
     - name: kube-secrets-init
-      image: doitintl/kube-secrets-init:0.4.0
+      image: ghcr.io/doitintl/kube-secrets-init:0.4.0
