chore(charts/dex-k8s-authenticator): add license file
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/dex-k8s-authenticator/Chart.yaml
+++ b/charts/dex-k8s-authenticator/Chart.yaml
@@ -21,7 +21,7 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - Initial version
+    - Add license file
   artifacthub.io/images: |
     - name: dex-k8s-authenticator
       image: mintel/dex-k8s-authenticator:1.4.0
