chore(charts/caddy): remove test files from final Helm package
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/caddy/Chart.yaml
+++ b/charts/caddy/Chart.yaml
@@ -21,7 +21,7 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - Fix ingress in NOTES.txt
+    - Remove test files from final Helm package
   artifacthub.io/images: |
     - name: caddy
       image: caddy:2.3.0
