chore(charts/browserless-chrome): remove test files from final Helm package
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/browserless-chrome/Chart.yaml
+++ b/charts/browserless-chrome/Chart.yaml
@@ -21,6 +21,7 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - Add license file
+    - Remove test files from final Helm package
   artifacthub.io/images: |
     - name: browserless-chrome
       image: browserless/chrome:1.45.1-chrome-stable
