--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -75,7 +75,8 @@ podAnnotations: {}
 podSecurityContext: {}
   # fsGroup: 2000
 
-# -- Share node's network interfaces with the Pods
+# -- Run pods in the host network of nodes.
+# Warning: The use of host network is [discouraged](https://kubernetes.io/docs/concepts/configuration/overview/#services). Make sure to use it only when absolutely necessary.
 hostNetwork: false
 
 # -- Container [security context](https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-container).
