--- a/charts/caddy/templates/deployment.yaml
+++ b/charts/caddy/templates/deployment.yaml
@@ -14,7 +14,9 @@ spec:
   template:
     metadata:
       annotations:
+      {{- if not (or (has "-watch" .Values.extraArgs) (has "--watch" .Values.extraArgs)) }}
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+      {{- end }}
       {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
@@ -42,6 +44,9 @@ spec:
             {{- if and .Values.config .Values.adapter }}
             - --adapter
             - {{ .Values.adapter }}
+            {{- end }}
+            {{- with .Values.extraArgs }}
+              {{- toYaml . | nindent 12 }}
             {{- end }}
           {{- with .Values.env }}
           env:
