--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -153,6 +153,9 @@ service:
   # Useful for [preserving the client source IP](https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip).
   externalTrafficPolicy:
 
+  # --  Enable client IP based session affinity. [More info](https://kubernetes.io/docs/concepts/services-networking/service/#virtual-ips-and-service-proxies)
+  sessionAffinity:
+
 # -- Additional services exposing servers (SFTP, FTP, WebDAV, HTTP) individually.
 # The schema matches the one under the `service` key. Additional services need at least one port.
 services: {}
@@ -166,6 +169,8 @@ services: {}
   #       port: 22
   #       nodePort:
   #   externalTrafficPolicy:
+  #   sessionAffinity:
+
 
 ui:
   ingress:
