--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -52,18 +52,25 @@ volumeMounts: []
 # See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#environment-variables) for details.
 envFrom: []
 
-# -- Additional environment variables passed directly to containers.
-# See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#environment-variables) for details.
+# -- Allows to set additional environment variables. See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#environment-variables) for details.
+envVars: []
+  # - name: SOME_ENV_VAR
+  #   value: SOME_VALUE
+  # - name: SOME_ENV_VAR2
+  #   valueFrom:
+  #     secretKeyRef:
+  #       name: SOME_SECRET_NAME
+  #       key: SOME_SECRET_KEY
+  # - name: SOME_ENV_VAR3
+  #   valueFrom:
+  #     configMapKeyRef:
+  #       name: SOME_CONFIGMAP_NAME
+  #       key: SOME_CONFIGMAP_KEY
+
+
+# -- Allows to set additional environment variables based on simplified key-value syntax.
 env: {}
-
-# -- Additional environment variables values of which are populated from specific [secrets and keys](https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets-as-environment-variables)
-envFromSecrets: []
-# - name: SOME_ENV_VAR
-#   valueFrom:
-#     secretKeyRef:
-#       name: SOME_SECRET_NAME
-#       key: SOME_SECRET_KEY
-
+  # SOME_ENV_VAR: SOME_VALUE
 
 serviceAccount:
   # -- Enable service account creation.
