--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -10,6 +10,9 @@ chart/dex-k8s-authenticator:
 chart/kube-secrets-init:
   - charts/kube-secrets-init/**/*
 
+chart/rabbitmq-operator:
+  - charts/rabbitmq-operator/**/*
+
 chart/sftpgo:
   - charts/sftpgo/**/*
 
