--- a/charts/kube-secrets-init/templates/mutatingwebhook.yaml
+++ b/charts/kube-secrets-init/templates/mutatingwebhook.yaml
@@ -61,6 +61,7 @@ webhooks:
           - "*"
         resources:
           - pods
+    failurePolicy: {{ .Values.failurePolicy }}
     namespaceSelector:
     {{- with .Values.namespaceSelector.matchLabels }}
       matchLabels:
