feat(charts/kube-secrets-init): add matchLabelts to objectSelector in mutating webhook
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/kube-secrets-init/Chart.yaml
+++ b/charts/kube-secrets-init/Chart.yaml
@@ -18,6 +18,8 @@ annotations:
       description: Removed redundant objectSelector default
     - kind: added
       description: Mutating webhook failure policy variable
+    - kind: added
+      description: Label matching to objectSelector
   artifacthub.io/images: |
     - name: kube-secrets-init
       image: ghcr.io/doitintl/kube-secrets-init:0.4.0
