feat(charts/kube-secrets-init): add timeoutSeconds to mutating webhook
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/kube-secrets-init/templates/mutatingwebhook.yaml
+++ b/charts/kube-secrets-init/templates/mutatingwebhook.yaml
@@ -62,6 +62,9 @@ webhooks:
         resources:
           - pods
     failurePolicy: {{ .Values.failurePolicy }}
+    {{- with .Values.timeoutSeconds }}
+    timeoutSeconds: {{ . }}
+    {{- end }}
     namespaceSelector:
     {{- with .Values.namespaceSelector.matchLabels }}
       matchLabels:
