--- a/charts/kube-secrets-init/Chart.yaml
+++ b/charts/kube-secrets-init/Chart.yaml
@@ -17,9 +17,11 @@ annotations:
     - kind: changed
       description: Removed redundant objectSelector default
     - kind: added
-      description: Mutating webhook failure policy variable
+      description: Mutating webhook failure policy configuration
     - kind: added
       description: Label matching to objectSelector
+    - kind: added
+      description: Mutating webhook timeout configuration
   artifacthub.io/images: |
     - name: kube-secrets-init
       image: ghcr.io/doitintl/kube-secrets-init:0.4.0
